# Kassiopeia

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  KasperVersion.h.in  KasperVersion.json.in  KasperVersion.xml.in  LICENSE  LICENSE.md  LICENSEtest.rst  LICENSEtest.txt  Makefile  README  README.md  authors.html  compiling.html  configuration.html  create_kasper_user_directory.sh.in  examples.html  external_documentation.html  genindex.html  index.html  introduction.html  kasper-krypton.bash.in  kasperenv.sh.in  kgeobag_basic.html  kgeobag_complex.html  license.html  objects.inv  search.html  searchindex.js  setup.sh
Documentation/: CMakeLists.txt
Documentation/Bindings/: README.md  bindings_full.md  bindings_full.rst  bindings_full.xml  bindings_full_examples.md
Documentation/Reference/: kasper.doxygen.in
Documentation/gh-pages/: Makefile  README
Documentation/gh-pages/source/: KEMField_manual_link.rst  authors.rst  bindings.rst  compiling.rst  conf.py  configuration.rst  configuring_simulation.rst  configuring_simulation_expressions.rst  configuring_simulation_messagingsystem.rst  configuring_simulation_pitfalls.rst  configuring_simulation_statements.rst  contact.rst  directory_structure.rst  discussion.rst  element_kassiopeia.rst  element_kemfield.rst  element_kgeobag.rst  examples.rst  index.rst  introduction.rst  kassiopeia_generation.rst  kassiopeia_navigation.rst  kassiopeia_output.rst  kassiopeia_propagation.rst  kassiopeia_simulation.rst  kassiopeia_structure.rst  kassiopeia_tools.rst  kassiopeia_visualization.rst  kemfield_fields.rst  kemfield_manual.rst  kemfield_tools.rst  kemfield_visualization.rst  kgeobag_basic.rst  kgeobag_complex_shapes.rst  kgeobag_geometry.rst  kgeobag_simple_shapes.rst  kgeobag_tools.rst  kgeobag_visualization.rst  licensetest.rst  links.rst  (+8 more)
Examples/: .gitignore  CMakeLists.txt  ks-particles-example.cxx
KEMField/: CMakeLists.txt  KEMFieldConfig.cmake.in  ModuleConfig.cmake.in  ModuleConfigInstalled.cmake.in  ModuleConfigVersion.cmake.in  README  REAMDE_InspectEMFile.md
KEMField/Documentation/: CMakeLists.txt
KEMField/Documentation/Reference/: kemfield.doxygen.in
KEMField/Documentation/manual/: manual.aux  manual.dvi  manual.tex  manual.toc
KEMField/Documentation/ps/: coil.ps  conicSect.ps  discretizedGeometry.eps  discretizedGeometry.ps  katrin-logo.ps  loop.ps  multipleSourcePoints.ps  rectangle.ps  ring.ps  solenoid.ps  tiltedcoils.ps  triangle.ps  wire.ps
KEMField/Source/Applications/: CMakeLists.txt  CompareFieldsAndPotentialsROOT.cc  ComputeChargeDensities.cc  ComputeChargeDensitiesFromElcd33File.cc  DistanceRatioFromKbdROOT.cc  InspectEMFile.cc  KdbConverter.cc  TransferEMElement.cc  VisualizeEMGeometry.cc  WriteAsciiToPCD.cc  WriteKbdToAscii.cc
KEMField/data/: CMakeLists.txt
KGeoBag/: CMakeLists.txt  KGeoBagConfig.cmake.in  ModuleConfig.cmake.in  ModuleConfigInstalled.cmake.in  ModuleConfigVersion.cmake.in
KGeoBag/Documentation/: CMakeLists.txt
KGeoBag/Source/: .gitignore
Kassiopeia/: CMakeLists.txt  KassiopeiaConfig.cmake.in  KassiopeiaConfig.h.in  ModuleConfig.cmake.in  ModuleConfigInstalled.cmake.in  README
Kassiopeia/AnalysisExamples/: QuadrupoleTrapAnalysis.ipynb
Kassiopeia/Bindings/: CMakeLists.txt
Kassiopeia/Documentation/: CMakeLists.txt
Kassiopeia/Fields/: CMakeLists.txt
Kassiopeia/Generators/: CMakeLists.txt
Kassiopeia/Geometry/: CMakeLists.txt
Kassiopeia/Interactions/: CMakeLists.txt
Kassiopeia/Math/: CMakeLists.txt
Kassiopeia/Modifiers/: CMakeLists.txt
Kassiopeia/Navigators/: CMakeLists.txt
Kassiopeia/Objects/: CMakeLists.txt
Kassiopeia/Operators/: CMakeLists.txt
Kassiopeia/Python/: CMakeLists.txt  KassiopeiaReader.py
Kassiopeia/Readers/: CMakeLists.txt
Kassiopeia/Simulation/: CMakeLists.txt
Kassiopeia/Terminators/: CMakeLists.txt
Kassiopeia/Trajectories/: CMakeLists.txt
Kassiopeia/Utility/: CMakeLists.txt
Kassiopeia/Visualization/: CMakeLists.txt
Kassiopeia/Writers/: CMakeLists.txt
Kassiopeia/XML/: CMakeLists.txt
Kommon/: CMakeLists.txt  KommonConfig.cmake.in  KommonConfigVersion.cmake.in  ModuleConfig.cmake.in  ModuleConfigInstalled.cmake.in  ModuleConfigVersion.cmake.in  README  kasperenv.sh
Kommon/Applications/: CMakeLists.txt
Kommon/Base/: CMakeLists.txt
Kommon/Binning/: CMakeLists.txt
Kommon/Boost/: CMakeLists.txt
Kommon/Core/: CMakeLists.txt
Kommon/Documentation/: CMakeLists.txt
Kommon/Gsl/: CMakeLists.txt
Kommon/Math/: CMakeLists.txt
Kommon/Root/: CMakeLists.txt
Kommon/TBB/: CMakeLists.txt
Kommon/Test/: CMakeLists.txt  TestXMLConditions.cxx  TestXMLConditions.xml  TestXMLElements.cxx  TestXMLFormulas.cxx  TestXMLFormulas.xml  TestXMLIncludes.cxx  TestXMLLoops.cxx  TestXMLPrint.cxx  TestXMLPrint.xml  TestXMLSerialization.cxx  TestXMLSerialization.xml  TestXMLTokenizer.cxx  TestXMLTokenizer.xml  TestXMLVariables.cxx  TestXMLVariables.xml
Kommon/Vtk/: CMakeLists.txt
Kommon/cmake/: CMakeDependentOption.cmake  CMakeLists.txt  CheckCompiler.cmake  FindBoost.cmake  FindFFTW.cmake  FindGMSH.cmake  FindGSL.cmake  FindGperftools.cmake  FindLOG4CXX.cmake  FindOpenCL.cmake  FindPETSc.cmake  FindPackageMultipass.cmake  FindROOT.cmake  FindSQLite3.cmake  FindSphinx.cmake  FindTBB.cmake  KasperDefaults.cmake  MacroCheckPackageLibs.cmake  MacroCheckPackageVersion.cmake  MacroParseArguments.cmake  OptimizeForArchitecture.cmake  ResolveCompilerPaths.cmake  update.sh
UnitTest/: CMakeLists.txt  ModuleConfig.cmake.in  ModuleConfigInstalled.cmake.in  ModuleConfigVersion.cmake.in  UnitTestConfig.cmake.in  UnitTestConfigVersion.cmake.in  doctest_main.cc
UnitTest/Doctest/: README.md
UnitTest/GoogleTest/: CMakeLists.txt
UnitTest/Include/: UnitTest.h
UnitTest/KEMField/: CMakeLists.txt
UnitTest/KGeoBag/: CMakeLists.txt
UnitTest/Kasper/: CMakeLists.txt
UnitTest/Kassiopeia/: CMakeLists.txt
UnitTest/Kommon/: BaseStringUtils.cxx  CMakeLists.txt  Integrator.cxx  KComplexElement.cxx  Math.cxx  StringUtils.cxx  TestXML.cxx
UnitTest/MockUps/: CMakeLists.txt
(+8627 files in other folders)
